Findbugs in imported core code